<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edi_bus_pannel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".EditBusDetails">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/add_remove_bus_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/editTextBusNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:autofillHints="Enter Bus Number"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:dropDownWidth="wrap_content"
            android:dropDownHeight="wrap_content"
            android:hint="@string/bus_number"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/edit_bg"
            android:progressTint="@color/edit_bg"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/editTextType"
            app:layout_constraintTop_toBottomOf="@+id/editTextBusNo"
            tools:layout_editor_absoluteX="6dp" />

        <EditText
            android:id="@+id/editTextType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="Bus Type "
            android:background="@android:color/transparent"
            android:hint="@string/enter_bus_type"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBusNo" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextType"
            app:layout_constraintVertical_bias="0.01">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp">


                <LinearLayout
                    android:id="@+id/parent_lay1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:id="@+id/parent_lay2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_toEndOf="@+id/parent_lay1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent" >

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/parent_lay3"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_below="@+id/parent_lay2"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:orientation="vertical"
                    android:padding="10dp"/>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/add_field_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#555"
            android:onClick="addField"
            android:text="@string/add_stops"
            android:textColor="#FFF"
            app:layout_constraintEnd_toStartOf="@+id/remove_field_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <Button
            android:id="@+id/remove_field_button"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#555"
            android:onClick="RemoveField"
            android:text="@string/remove_stop"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <Button
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_list"
            android:onClick="addBus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_field_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>