<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_stops_Map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStopsMap"
    tools:ignore="HardcodedText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/search_place_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="35dp"
            android:background="@drawable/search_edittext_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_srch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_search_black_24dp"
                tools:ignore="ContentDescription" />


            <EditText
                android:id="@+id/search_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/img_srch"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="Search For Place"
                android:onClick="search"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_color"
                android:textColorLink="@color/backgound"
                android:textSize="15sp" />

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:background="@android:color/white"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:text="@string/selected_location_details"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:text="@string/latlang"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/latlang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/latlang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/latlang_of_slected_location"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="38dp"
                android:layout_height="15dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="52dp"
                android:layout_marginTop="36dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/loc_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintVertical_bias="1.0" />


            <AutoCompleteTextView
                android:id="@+id/loc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints="Bus Stop Name"
                android:background="@android:color/transparent"
                android:hint="@string/name_of_the_location"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.159"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/latlang" />

            <Button
                android:id="@id/save_btn"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:background="@drawable/save_btn_bg"
                android:onClick="saveStop"
                android:text="Save Stop Info"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_of_bus"
                app:layout_constraintVertical_bias="0.652" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:text="Bus List: "
                android:textColor="@android:color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/list_of_bus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/list_of_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:hint="Bus list"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/loc_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>